otoroshi/test/resources/kubernetes/kubernetes-scanner.yaml
apiVersion: "proxy.otoroshi.io/v1"
kind: "Route"
metadata:
  name: kubernetes-scanner
spec:
  serviceAccountName: otoroshi-admin-user
  _loc:
    tenant: "default"
    teams:
      - "default"
  id: "route_86b380846-29d7-4934-be4e-e937431c94aa"
  name: "Kubernetes Scanner"
  description: "A new route"
  tags: []
  enabled: true
  debug_flow: false
  export_reporting: false
  capture: false
  bound_listeners: []
  frontend:
    domains:
      - "k3s-scanner.k3s.local/"
    strip_path: true
    exact: false
    headers: {}
    cookies: {}
    query: {}
    methods: []
  backend:
    targets:
      - id: "target_1"
        hostname: "request.otoroshi.io"
        port: 443
        tls: true
        weight: 1
        backup: false
        predicate:
          type: "AlwaysMatch"
        protocol: "HTTP/1.1"
        ip_address: null
        tls_config:
          certs: []
          trusted_certs: []
          enabled: false
          loose: false
          trust_all: false
    root: "/"
    rewrite: false
    load_balancing:
      type: "RoundRobin"
    client:
      retries: 1
      max_errors: 20
      retry_initial_delay: 50
      backoff_factor: 2
      call_timeout: 30000
      call_and_stream_timeout: 120000
      connection_timeout: 10000
      idle_timeout: 60000
      global_timeout: 30000
      sample_interval: 2000
      proxy: {}
      custom_timeouts: []
      cache_connection_settings:
        enabled: false
        queue_size: 2048
    health_check:
      enabled: false
      url: ""
      timeout: 5000
      healthyStatuses: []
      unhealthyStatuses: []
      blockOnRed: false
      logicCheck: true
      healthyRegexChecks: []
      unhealthyRegexChecks: []
  backend_ref: null
  plugins:
    - enabled: true
      debug: false
      plugin: "cp:otoroshi.next.plugins.KubernetesNamespaceScanBackend"
      include: []
      exclude: []
      config:
        namespaces:
          - "foo"
      bound_listeners: []
      plugin_index: {}
